--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "MakerApp",
+  "name": "ControllinoHotspot",
   "displayName": "Maker App",
   "expo": {
     "scheme": "makerappscheme"
